<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="app_name">Go4Lunch</string>
    <string name="sign_in_with_email">SIGN IN WITH EMAIL</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="sign_in_with_twitter">SIGN IN WITH TWITTER</string>
    <string name="food_image" translatable="false">food_image</string>
    <string name="go4lunch" translatable="false">Go4Lunch</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="connection_succeed">Authentication successful</string>

    <string name="facebook_application_id" translatable="false">1072770610782396</string>
    <string name="facebook_client_token">436fd650e4dab6fcfb3f18955e43ea58</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb413982862832829</string>

    <string name="google_maps_api_key" translatable="false">AIzaSyBo7vFljY6QFDzKGgeLotZAl4Bl7Y1DzX0</string>

    <string name="twitter_consumer_key" translatable="false">P0q8bibcBKmpGMPJk5b3kfTt5</string>
    <string name="twitter_consumer_secret" translatable="false">pXAVlratB26l1vQnzlmEtbr8E3wNeuSWjjNog6QJm2InPoKI3q</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="search">Search</string>
    <string name="map_view">MAP VIEW</string>
    <string name="list_view">LIST VIEW</string>

    <string name="workmates">WORKMATES</string>
    <string name="background">background</string>
    <string name="user_profile_picture" translatable="false">User profile picture</string>
    <string name="no_username_found">No username found</string>
    <string name="no_email_found">No email found</string>
    <string name="no_hours">No hours</string>
    <string name="workmate_picture" translatable="false">Workmate picture</string>
    <string name="image_restaurant">Image restaurant</string>
    <string name="stars">Stars</string>
    <string name="call_button">Call button</string>
    <string name="call">CALL</string>
    <string name="like_button">Like button</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="website_button">Website button</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="title_activity_settings">Settings</string>

    <string name="notifications_on_off">Activate notifications</string>
    <string name="delete_confirmation">Do you really want to delete this account ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="no_restaurant_selected">There\'s no restaurant selected</string>
    <string name="unlike">UNLIKE</string>
    <string name="distance" translatable="false">%s m</string>
    <string name="someone_is_joining">%1s is joining !</string>
    <string name="choice">%s is going to %s today !</string>
    <string name="no_choice">%s has not chosen any restaurant today.</string>
    <string name="notification_alone">Today, you\'re going to %s, %s !</string>
    <string name="notification_with_colleagues">Today, you\'re going to %s, %s with %s !</string>
    <string name="app_logo" translatable="false">App logo</string>
</resources>
