<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_list_view"
        android:enabled="true"
        android:title="@string/list_view"
        android:icon="@drawable/baseline_list_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_map"
        android:enabled="true"
        android:title="@string/map_view"
        android:icon="@drawable/baseline_map_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_workmates"
        android:enabled="true"
        android:title="@string/workmates"
        android:icon="@drawable/baseline_person_24"
        app:showAsAction="ifRoom" />
</menu>