<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_page_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_page_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/go4LunchThemeColor"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_page_toolbar"
            app:layout_constraintBottom_toTopOf="@id/activity_main_page_bottom_nav_view"/>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/activity_main_page_bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/main_page_bottom_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/activity_main_page_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/go4LunchThemeColor"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/activity_main_page_nav_header"
        app:menu="@menu/activity_main_page_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>