...
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/header_user_name"/>

    <ImageView
        android:id="@+id/header_user_image"
        android:contentDescription="@string/user_profile_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
...
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/header_user_image"
        app:layout_constraintTop_toTopOf="@id/header_user_image"/>

    <TextView
        android:id="@+id/header_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/header_user_name"
        app:layout_constraintBottom_toBottomOf="@id/header_user_image"/>

...
